Put jar files installed in the JDK's jre/lib/ext directory after the jar files and classes bundled with Tomcat. This is done by setting the "java.ext.dirs" property to a zero length string and by put the JDK's jre/lib/ext directory in Tomcat's class loader. This also fixes the problem that used to happen when you had the JSSE jars installed as a system extension and you had JSSE_HOME set.
git-svn-id: https://svn.apache.org/repos/asf/tomcat@287851 13f79535-47bb-0310-9956-ffa450edef68