@@ -33,7 +33,10 @@ goto end
 :okBasedir
 
 rem Set the default -Djava.endorsed.dirs argument
-set JAVA_ENDORSED_DIRS=%BASEDIR%\bin;%BASEDIR%\common\endorsed
+set JAVA_ENDORSED_DIRS=%BASEDIR%\common\endorsed
+
+rem Set the default -Djava.ext.dirs argument
+set JAVA_EXT_DIRS=
 
 rem Set standard CLASSPATH
 rem Note that there are no quotes as we do not want to introduce random
