@@ -73,6 +73,6 @@ fi
 # ----- Execute The Requested Command -----------------------------------------
 
 exec "$_RUNJAVA" $JAVA_OPTS $TOOL_OPTS \
-  -Djava.endorsed.dirs="$JAVA_ENDORSED_DIRS" -classpath "$CLASSPATH" \
-  -Dcatalina.home="$CATALINA_HOME" \
+  -Djava.endorsed.dirs="$JAVA_ENDORSED_DIRS" -Djava.ext.dirs="$JAVA_EXT_DIRS" \
+  -classpath "$CLASSPATH" -Dcatalina.home="$CATALINA_HOME" \
   org.apache.catalina.startup.Tool "$@"
